@@ -6,3 +6,4 @@
 - Detection if map is installed (req. home dir option)
 - improve performance with huge server lists (halflife), maybe by serverside
   filtering
+- check for qstat on startup
