@@ -1,22 +1,63 @@
 /* XPM */
 static char * t2_xpm[] = {
-"17 17 2 1",
+"16 16 44 1",
 " 	c None",
-".	c #000000",
-"                 ",
-"  ........       ",
-"  ........       ",
-"     ..          ",
-"     ..          ",
-"     ..          ",
-"     ..          ",
-"     ..          ",
-"         .....   ",
-"        .......  ",
-"        ..   ..  ",
-"           ...   ",
-"         ....    ",
-"        ..       ",
-"        .......  ",
-"        .......  ",
-"                 "};
+".	c #3E2802",
+"+	c #6C4602",
+"@	c #D08A00",
+"#	c #553700",
+"$	c #493005",
+"%	c #B17500",
+"&	c #472E00",
+"*	c #8A5A00",
+"=	c #A26A00",
+"-	c #392500",
+";	c #3D2B0B",
+">	c #966200",
+",	c #724A00",
+"'	c #000000",
+")	c #38280C",
+"!	c #696969",
+"~	c #77520E",
+"{	c #7F5200",
+"]	c #35260D",
+"^	c #422C06",
+"/	c #4F3E1D",
+"(	c #634206",
+"_	c #503403",
+":	c #865700",
+"<	c #1B1100",
+"[	c #281900",
+"}	c #2C1D04",
+"|	c #9A6500",
+"1	c #2F2007",
+"2	c #925F00",
+"3	c #A96F00",
+"4	c #B57700",
+"5	c #241702",
+"6	c #C98500",
+"7	c #492F00",
+"8	c #CC8700",
+"9	c #603F00",
+"0	c #A66D00",
+"a	c #D88F00",
+"b	c #5C3C00",
+"c	c #D48D00",
+"d	c #513400",
+"e	c #332100",
+"    .      .    ",
+"   +@#    #@+   ",
+"  $%%&    &%%$  ",
+"  *=-      -=*  ",
+" ;>,'      ',>; ",
+" )!~{{{]]{{{~!) ",
+" ^/(_:>]]>:_(/^ ",
+" <[< {>]]>{ <[< ",
+"     {>}}>{     ",
+"     *|11|*     ",
+"     231132     ",
+"     245542     ",
+"     |6776|     ",
+"     38998=     ",
+"     0abbc0     ",
+"     d9ee9d     "};
