@@ -1,3 +1,9 @@
+Dec 15, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
+- server filters were broken, fixed
+- new Tribes2 icon
+- updated TODO
+- updated german translation
+
 Dec 15, 2001: Alex Burger <alex@fragit_dot_net>
 - Added Edit / Add Default Masters command.  Adds in all the default
   master servers in case you accidentally deleted one (or all)
